--- a/style.css
+++ b/style.css
@@ -24,14 +24,10 @@ body {
   min-height: 500px;
 }
 
-#currentOrder {
+#order {
   background-color: #EFEFEF;
   width: calc(100% - 40px);
   height: calc(100% - 40px);
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  align-content: flex-end;
 }
 
 .button {
@@ -61,7 +57,7 @@ body {
   border-radius: 20px;
   border: 6px solid #232323;
   display: flex;
-  align-content: center;
+  align-items: center;
   justify-content: center;
 }
 
@@ -79,4 +75,23 @@ body {
 
 #orderTotal {
   font-family: "Arial";
+}
+
+#checkout {
+  width: 100%;
+  height: 40%;
+  display: flex;
+}
+
+#payment {
+  width: 100%;
+  height: 60%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-content: flex-end;
+}
+
+#cart {
+  //table
 }
