--- a/style.css
+++ b/style.css
@@ -24,10 +24,11 @@ body {
   min-height: 500px;
 }
 
-#order {
+#checkout {
   background-color: #EFEFEF;
   width: calc(100% - 40px);
   height: calc(100% - 40px);
+  align-items: center;
 }
 
 .button {
@@ -77,15 +78,15 @@ body {
   font-family: "Arial";
 }
 
-#checkout {
+#order {
   width: 100%;
-  height: 40%;
+  height: 70%;
   display: flex;
 }
 
 #payment {
   width: 100%;
-  height: 60%;
+  height: 30%;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -93,5 +94,5 @@ body {
 }
 
 #cart {
-  //table
+  width: 100%;
 }
