--- a/style.css
+++ b/style.css
@@ -93,6 +93,27 @@ body {
   align-content: flex-end;
 }
 
-#cart {
+.td {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.row {
   width: 100%;
+  height: 50px;
+  display: flex;
+}
+
+#item {
+  width: 65%;
+  background-color: grey;
+}
+
+#price {
+  width: 20%;
+}
+
+#qty {
+  width: 15%;
 }
