--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
   width: calc(100% - 40px);
   height: calc(100% - 40px);
   align-items: center;
+  border-radius: 20px;
 }
 
 .button {
@@ -39,15 +40,12 @@ body {
   border: 6px solid #E392FA;
   background-color: #3F3F3F;
   margin: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.button:hover {
-  background-color: #303030;
-}
-
-.button:active {
-  background-color: green;
-}
+.button:hover {background-color: #303030}
 
 .paymentButton {
   box-sizing: border-box;
@@ -62,9 +60,7 @@ body {
   justify-content: center;
 }
 
-.paymentButton:hover {
-  background-color: #E0E0E0
-}
+.paymentButton:hover {background-color: #E0E0E0}
 
 .paymentButton:active {
   background-color: red;
@@ -82,6 +78,9 @@ body {
   width: 100%;
   height: 70%;
   display: flex;
+  align-content: flex-start;
+  flex-wrap: wrap;
+  overflow-y: auto;
 }
 
 #payment {
@@ -97,23 +96,20 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  border-bottom: 2px solid black;
 }
 
 .row {
   width: 100%;
   height: 50px;
   display: flex;
+  margin: 0 20px;
 }
 
-#item {
-  width: 65%;
+.header {
   background-color: grey;
 }
 
-#price {
-  width: 20%;
-}
-
-#qty {
-  width: 15%;
+.button-label {
+  color: white;
 }
