--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   display: flex;
   user-select: none;
+  font-family: "Arial";
 }
 
 #buttonMatrix {
@@ -73,10 +74,6 @@ body {
   background-color: red;
 }
 
-.paymentLabel {
-  font-family: "Arial";
-}
-
 #order {
   width: 100%;
   height: 70%;
@@ -130,4 +127,8 @@ body {
 
 .removeButton {
   width: 10%;
+}
+
+.removeButton:hover {
+  color: #E392FA;
 }
