--- a/style.css
+++ b/style.css
@@ -48,6 +48,20 @@ body {
   color: black;
   border-radius: 5px;
   box-shadow: #232323 0 0 9px 1px;
+  font-weight: bold;
+}
+
+.complete-transaction {
+  background-color: rgba(0,255,0,0.4);
+  width: 80%;
+  padding: 20px 10px;
+  margin: 20px;
+  outline: none;
+  border: none;
+  color: black;
+  border-radius: 5px;
+  box-shadow: #232323 0 0 9px 1px;
+  font-weight: bold;
 }
 
 #buttonMatrix {
