--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
   font-weight: bold;
 }
 
-.complete-transaction {
+.process-transaction {
   background-color: rgba(0,255,0,0.4);
   width: 80%;
   padding: 20px 10px;
