--- a/style.css
+++ b/style.css
@@ -26,6 +26,10 @@ body {
   transition: 0.2s ease-in;
 }
 
+.hide {
+  display: none;
+}
+
 .modal {
   background-color: #EFEFEF;
   text-align: center;
@@ -62,6 +66,13 @@ body {
   border-radius: 5px;
   box-shadow: #232323 0 0 9px 1px;
   font-weight: bold;
+}
+
+#change-due {
+  margin: 10px;
+  color: red;
+  border: none;
+  background-color: #EFEFEF;
 }
 
 #buttonMatrix {
