--- a/stylesheets/cash-reconciliation.css
+++ b/stylesheets/cash-reconciliation.css
@@ -23,6 +23,10 @@ button {
   background-color: rgba(0,0,255,0.5);
 }
 
+#cancel-reconciliation-button {
+  background-color: rgba(255,0,0,0.5);
+}
+
 button:hover {
   opacity: 0.9;
 }
