--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -35,6 +35,7 @@ iframe {
   background-color: #232323;
   width: 75%;
   height: 100%;
+  min-height: 500px;
 }
 
 #navbar {
@@ -99,7 +100,15 @@ iframe {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 20;
+  overflow: hidden;
+}
+
+.buttonLabel#name {
+  font-size: 1em;
+}
+
+.buttonLabel#price {
+  font-size: 1.4em;
 }
 
 .button:hover {background-color: #303030}
