--- a/stylesheets/cash-reconciliation.css
+++ b/stylesheets/cash-reconciliation.css
@@ -23,6 +23,16 @@ button {
   background-color: rgba(0,0,255,0.5);
 }
 
+#settlement-total {
+  text-align: center;
+  font-size: 32;
+}
+
+#cash-float {
+  text-align: center;
+  font-size: 32;
+}
+
 #cancel-reconciliation-button {
   background-color: rgba(255,0,0,0.5);
 }
